# industrial-mobile-manipulator

./: README.md
src/move_arm/: CMakeLists.txt  README.md  package.xml
src/move_arm/include/: robot_arm_client.h
src/move_arm/scripts/: send_goal_to_arm.py
src/move_arm/src/: robot_arm_client.cpp
src/robot_description/: README.md  package.xml
src/robot_description/launch/: arm_gazebo_control_xacro.launch
src/robot_description/urdf/: mobile_manipulator.urdf  robot_arm.urdf  robot_base.urdf.xacro  robot_essentials.xacro
