<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>1.0.0</version>
  <description>modeling the robot base and arm</description>


  <maintainer email="zaki.x86@gmail.com">Mohamed Zaki</maintainer>



  <license>BSD</license>


 
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
